// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
//
// You may obtain a copy of the License at
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto2";

package com.google.firebase.remoteconfig.proto;

option java_package = "com.google.firebase.remoteconfig.proto";
option java_outer_classname = "ConfigPersistence";

message PersistedConfig {
    optional ConfigHolder fetched_config_holder = 1;
    optional ConfigHolder active_config_holder = 2;
    optional ConfigHolder defaults_config_holder = 3;
    optional Metadata metadata = 4;
    repeated Resource applied_resource = 5;
}

message KeyValue {
    optional string key = 1;
    optional bytes value = 2;
}

message NamespaceKeyValue {
    optional string namespace = 1;
    repeated KeyValue key_value = 2;
}

message ConfigHolder {
    repeated NamespaceKeyValue namespace_key_value = 1;
    optional fixed64 timestamp = 2;
    repeated bytes experiment_payload = 3;
}

message Metadata {
    optional int32 last_fetch_status = 1;
    optional bool developer_mode_enabled = 2;
    optional fixed64 last_known_experiment_start_time = 3;
}

message Resource {
    optional int32 resource_id = 1;
    optional fixed64 app_update_time = 2;
    optional string namespace = 3;
}